Add cli-parsing options (verbosity)
Signed-off-by: Raphaël Barrois <raphael.barrois@polytechnique.org>

--- a/README
+++ b/README
@@ -70,7 +70,7 @@ FORMATS: There are basically 5 kinds of files :
         - an optional row starting with build: giving the command to use for build ; available vars are : $CATS (list of cats for current host), $INPUT_FILE, $OUTPUT_FILE (path of files), $PARSE, $PARSE_PIPE, $LINK, $COPY (aliases for the standard actions taking INPUT_FILE from -i option and OUTPUT_FILE from -o, where $PARSE_PIPE is such that $PARSE -i $INPUT_FILE -o $OUTPUT_FILE == cat $INPUT_FILE | $PARSE_PIPE > $OUTPUT_FILE)
         - an optional row starting with install: giving the command to use for install ; available vars are : $INPUT_FILE, $OUTPUT_FILE (path of files), $COPY, $LINK (aliases for the standard actions, taking INPUT_FILE from -i and OUTPUT_FILE from -o), $USER, $GROUP, $MODE, $UMASK
         - an optional row starting with unbuild: giving the command to return to the original file from the built one ; available vars are : $CATS (list of cats for current host), $SRC_FILE, $DST_FILE (SRC : in 'src' ; DST : in 'dst'), $UNPARSE_PIPE
-        Rows for (un)build: and install: can be continues other the next one if ending with \ ; all spaces in the beginning of the new one will be stripped. The commands are passed to the shell "as is" : no variable substitution is performes.
+        Rows for (un)build: and install: can be continues other the next one if ending with \ ; all spaces in the beginning of the new one will be stripped. The commands are passed to the shell "as is" : no variable substitution is performed.
 
 COMMANDS: Available commands are :
     - init : initiate a new folder ; can take a path to a repo as argument, prefixed with "git" or "svn" if protocol can't be determined from url (the presence of git or svn in the path will be used unless disabled in config file) ; confmgr init git will run a git init
