Hum, clearly alpha...
Signed-off-by: Raphaël Barrois <raphael.barrois@polytechnique.org>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,5 @@
 ================================================================================
-VERSION 0.1.0                                                         20 11 2009
+VERSION 0.1.0a                                                        20 11 2009
 
 First release of confmgr
 
