--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,9 @@
 ================================================================================
+VERSION 0.1.0b                                                        09 03 2010
+
+A few fixes
+
+================================================================================
 VERSION 0.1.0a                                                        20 11 2009
 
 First release of confmgr
