--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,9 @@
 ================================================================================
+VERSION 0.1.0c                                                        19 07 2010
+
+Include basic "export" command
+
+================================================================================
 VERSION 0.1.0b                                                        09 03 2010
 
 A few fixes
