Prepare for next version
Signed-off-by: Raphaël Barrois <raphael.barrois@polytechnique.org>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
 ================================================================================
+VERSION 0.1.0d                                                        XX XX XXXX
+
+================================================================================
 VERSION 0.1.0c                                                        19 07 2010
 
 Include basic "export" command
