--- a/ChangeLog
+++ b/ChangeLog
@@ -14,7 +14,7 @@ A few fixes
 ================================================================================
 VERSION 0.1.0a                                                        20 11 2009
 
-First release of confmgr
+First release of uconf
 
 ================================================================================
 vim:et:ts=4:sw=4:tw=80:enc=utf-8:
