--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+v0.3.3 (03/11/2012)
+===================
+
+*Bugfix:*
+
+    * Fix handling of subcommand errors
+    * Fix default encoding of files
+
 v0.3.2 (03/11/2012)
 ===================
 
