--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+v0.3.4 (current)
+================
+
+*Bugfix:*
+
+    * uconf diff and uconf backdiff behave as expected:
+      they show the diff that would be applied to target/source.
+
 v0.3.3 (03/11/2012)
 ===================
 
