--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+v0.3.5 (2013-04-25)
+===================
+
+*Bugfix:*
+
+    * Fix handling of 'elif' in files.
+
 v0.3.4 (2013-04-05)
 ===================
 
