Remove Python2 compatibility.
- Drop object base class
- Cleaner super()
- Remove `from __future__`

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+v0.4.0 (2020-07-15)
+===================
+
+*Misc:*
+
+    * Drop Python 2 compatibility
+
 v0.3.8 (2014-03-08)
 ===================
 
