--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+v0.4.1 (2020-07-17)
+===================
+
+*Bugfix:*
+
+    * Fix backporting under Python3.5+
+
 v0.4.0 (2020-07-15)
 ===================
 
